; ModuleID = '/home/carl/AnghaBench/esp-idf/components/console/linenoise/extr_linenoise.c_linenoiseHistoryFree.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/console/linenoise/extr_linenoise.c_linenoiseHistoryFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@history = common dso_local global i32***** null, align 8
@history_len = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linenoiseHistoryFree() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*****, i32****** @history, align 8
  %3 = icmp ne i32***** %2, null
  br i1 %3, label %4, label %23

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %5

5:                                                ; preds = %17, %4
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* @history_len, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %20

9:                                                ; preds = %5
  %10 = load i32*****, i32****** @history, align 8
  %11 = load i32, i32* %1, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32****, i32***** %10, i64 %12
  %14 = load i32****, i32***** %13, align 8
  %15 = bitcast i32**** %14 to i32*****
  %16 = call i32 @free(i32***** %15)
  br label %17

17:                                               ; preds = %9
  %18 = load i32, i32* %1, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %1, align 4
  br label %5

20:                                               ; preds = %5
  %21 = load i32*****, i32****** @history, align 8
  %22 = call i32 @free(i32***** %21)
  br label %23

23:                                               ; preds = %20, %0
  store i32***** null, i32****** @history, align 8
  ret void
}

declare dso_local i32 @free(i32*****) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
